fix label vertical spacing in AFieldBase component (#223)

--- a/framework/components/AFieldBase/AFieldBase.scss
+++ b/framework/components/AFieldBase/AFieldBase.scss
@@ -14,7 +14,7 @@
 
   &__label {
     display: block;
-    margin: 0;
+    margin: 0 0 4px 0;
     font-size: $font-size--sm;
     font-weight: 600;
 
